# AI_SOL-Vce_Agent

./: .dockerignore  .env.example  .gitignore  Anchor.toml  Dockerfile  README.md  compose.dev.yml  package-lock.json  package.json  tsconfig.json
ai_engine/: main.py  pyproject.toml  solana_client.py
ai_engine/tests/: .gitkeep
ai_engine/voice_agent/personas/: car_rental_pl.md  dental_pl.md  hotel_pl.md  restaurant_pl.md  salon_pl.md  ski_rental_pl.md
app/: .env.example  .gitkeep  next.config.mjs  package.json  tailwind.config.ts
app/app/: globals.css  layout.tsx  page.tsx
app/app/(public)/book/: page.tsx
app/app/(public)/pay/[bookingId]/: page.tsx
app/app/(writer)/business/new/: page.tsx
app/app/(writer)/dashboard/: page.tsx
app/components/providers/: wallet-provider.tsx
app/lib/: anchor-client.ts  utils.ts
app/lib/idl/: voicedesk.json
documentation/: ARCHITECTURE.md  CLAUDE.md  PROJECT_OVERVIEW.md  RAILWAY_BRIDGE_RUNBOOK.md  SOLANA_DEVNET_DEPLOYMENT_RUNBOOK.md  VERCEL_DEPLOYMENT_RUNBOOK.md
documentation/architecture/: DIAGRAMS.md
programs/voicedesk/: .gitkeep  Cargo.toml
programs/voicedesk/src/: errors.rs  lib.rs
programs/voicedesk/src/instructions/: claim_full.rs  confirm_attendance.rs  create_booking_intent.rs  create_business.rs  customer_cancel.rs  lock_deposit.rs  mod.rs  release_partial.rs
programs/voicedesk/src/state/: booking.rs  business.rs  mod.rs
scripts/: deploy-devnet.ps1  print-program-id.ps1  sync-idl.ps1  verify-devnet-program.ps1
tests/: .gitkeep  voicedesk.ts
